<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<Button
    android:text="@string/btn_Sart"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:id="@+id/btn1"/>
<Button
    android:text="@string/btn_Settings"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:id="@+id/btn2"/>
<Button
    android:text="@string/btn_Exit"
    android:hint="@string/hint_btn_Exit"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:id="@+id/btn3"/>

</LinearLayout>
